# ROS2-Protobuf

demos/demo_nodes_cpp/: CMakeLists.txt  package.xml
demos/demo_nodes_cpp/include/demo_nodes_cpp/: latency_stats.hpp
demos/demo_nodes_cpp/proto/: simple.proto
demos/demo_nodes_cpp/src/topics/: latency_protobuf_big_listener.cpp  latency_protobuf_big_talker.cpp  latency_protobuf_nested_listener.cpp  latency_protobuf_nested_talker.cpp  latency_ros2msg_big_listener.cpp  latency_ros2msg_big_talker.cpp  latency_ros2msg_nested_listener.cpp  latency_ros2msg_nested_talker.cpp  protobuf_listener.cpp  protobuf_talker.cpp
docker/: ros_docker_into.sh  ros_docker_run.sh
example/: CMakeLists.txt  package.xml
example/include/example/: latency_stats.hpp
example/msg/: BigBytes.msg
example/proto/: simple.proto
example/src/: publisher.cpp  subscriber.cpp
example/src/topics/: latency_protobuf_big_listener.cpp  latency_protobuf_big_talker.cpp  latency_protobuf_nested_listener.cpp  latency_protobuf_nested_talker.cpp  latency_ros2msg_big_listener.cpp  latency_ros2msg_big_talker.cpp  latency_ros2msg_nested_listener.cpp  latency_ros2msg_nested_talker.cpp  protobuf_listener.cpp  protobuf_talker.cpp
rclcpp/rclcpp/include/rclcpp/: get_message_type_support_handle.hpp  is_ros_compatible_type.hpp  publisher.hpp
rclcpp/rclcpp/include/rclcpp/detail/: protobuf_traits.hpp  protobuf_typesupport_fastrtps.hpp
